@@ -1,3 +1,9 @@
+2013/12/14 (version 1.21)
+
+- Improved the search window to require all entered words to be present
+  in either project or description fields of a task.
+
+
 2013/12/05 (version 1.20)
 
 - Fixed a crash when there's no database.
